Fix spacing issues

--- a/src/app/organizations/components/organization-info/organization-info.component.scss
+++ b/src/app/organizations/components/organization-info/organization-info.component.scss
@@ -1,8 +1,1 @@
-/*.organization-info {
-  display: flex;
-  flex-direction: column;
-  & .utility__col {
-    flex: 1;
-  }
-}
-*/
+
