--- a/src/app/organizations/containers/organization-detail/organization-detail.component.scss
+++ b/src/app/organizations/containers/organization-detail/organization-detail.component.scss
@@ -1,29 +1,1 @@
 
-/*
-.organizations {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-  & .organizations__select {
-    padding: 1rem;
-    width: 100%;
-    max-width: 600px;
-  }
-}
-.organizations__col {
-  flex: 1;
-  padding: 1rem;
-  width: 100%;
-  max-width: 600px;
-  & button {
-    width: 100%;
-  }
-}
-
-@media only screen and (min-width: 900px) {
-  .organizations {
-    justify-content: flex-start;
-  }
-}
-*/
